--- a/comp/pom.xml
+++ b/comp/pom.xml
@@ -65,7 +65,7 @@
 	</repositories>
 
 	<dependencies>
-
+		
 		<!-- tiles -->
 
 		<dependency>
@@ -87,6 +87,15 @@
 		</dependency>
 
 		<!-- /tiles -->
+		
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <version>1.18.12</version>
+		    <scope>provided</scope>
+		</dependency>
+				
 		<!-- 표준프레임워크 실행환경 -->
 		<dependency>
 			<groupId>egovframework.rte</groupId>
