--- a/comp/src/main/resources/egovframework/egovProps/globals.properties
+++ b/comp/src/main/resources/egovframework/egovProps/globals.properties
@@ -43,7 +43,7 @@ Globals.mysql.Password =xz4fmrSdr1vGGl6UtwPLwA%3D%3D
 #oracle
 Globals.oracle.DriverClassName=oracle.jdbc.driver.OracleDriver
 Globals.oracle.Url=jdbc:oracle:thin:@127.0.0.1:1521:xe
-Globals.oracle.UserName =com
+Globals.oracle.UserName =egov
 Globals.oracle.Password =xz4fmrSdr1vGGl6UtwPLwA%3D%3D
 
 #altibase
