--- a/comp/pom.xml
+++ b/comp/pom.xml
@@ -34,7 +34,8 @@
 		</repository>
 		<repository>
 			<id>egovframe</id>
-			<url>http://maven.egovframe.go.kr/maven/</url>
+			<!-- <url>http://maven.egovframe.go.kr/maven/</url> -->
+			<url>http://maven.egovframe.kr:8080/maven/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
